--- a/config-template.json
+++ b/config-template.json
@@ -19,6 +19,10 @@
         "@everyone",
         "Board Member"
       ]
+    },
+    "gallery": {
+      "enabled": true,
+      "name": "gallery"
     }
   },
   "org": {
